syntax = "proto3";

package sample;

service ItemService {
  rpc CreateItem (ItemRequest) returns (ItemResponse);
  rpc GetItem (ItemRequest) returns (ItemResponse);
  rpc UpdateItem (ItemRequest) returns (ItemResponse);
  rpc DeleteItem (ItemRequest) returns (ItemResponse);
}

message ItemRequest {
  string id = 1;
  string name = 2;
}

message ItemResponse {
  string message = 1;
  Item item = 2;
}

message Item {
  string id = 1;
  string name = 2;
}
